(lang dune 2.0)
(name watch-later)
(generate_opam_files true)
(license MIT)
(authors "Aaron L. Zeng <me@bcc32.com>")
(maintainers "Aaron L. Zeng <me@bcc32.com>")
(source (github bcc32/watch-later))
(homepage https://github.com/bcc32/watch-later)
(documentation https://github.com/bcc32/watch-later)
(package
 (name watch-later)
 (synopsis "Utility for managing a queue of YouTube content")
 (description "")
 (depends (dune (>= 2.0))
  (async (and (>= v0.14.0) (< v0.15.0)))
  (async_interactive (and (>= v0.14.0) (< v0.15.0)))
  (async_ssl (and (>= v0.14.0) (< v0.15.0)))
  (caqti-async (and (>= 1.3.0) (< 1.4.0~)))
  (caqti-driver-sqlite3 (and (>= 1.3.0) (< 1.4.0~)))
  (cohttp-async (and (>= 2.0.0) (< 3.0.0)))
  (core (and (>= v0.14.0) (< v0.15.0)))
  (cryptokit (and (>= 1.16.0) (< 1.17.0~)))
  (ppx_jane (and (>= v0.14.0) (< v0.15.0)))
  (re (and (>= 1.0) (< 2.0)))
  (sqlite3 (and (>= 5.0.0) (< 6.0.0)))
  (uri (and (>= 3.0.0) (< 4.0.0)))
  (webbrowser (and (>= 0.6.1) (< 0.7.0)))
  (yojson (and (>= 1.7.0) (< 2.0.0)))))
