(library
 (name watch_later)
 (libraries
  async
  async_interactive
  caqti-async
  caqti-driver-sqlite3
  cohttp-async
  core
  core_kernel.composition_infix
  cryptokit
  core_kernel.enum
  fzf
  jsonaf
  re
  uri
  watch_later_directories
  webbrowser
  youtube_api)
 (preprocess
  (pps ppx_jane ppx_jsonaf_conv ppx_log)))
